# axelar-relayer

./: .env_template  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ton  Dockerfile.xrpl  README.md  TRACING.md  config.template.yaml  config.yaml.template  docker-compose-ton.yml  docker-compose-xrpl.yml  docker-compose.yml  entrypoint-ton.sh
.github/workflows/: deploy.yml  format.yml
config/: config.template.yaml
deploy/config/: jaeger.yaml
deploy/scripts/: fetch_secrets.sh  install.sh
deploy/systemd/: xrpl-distributor@.service  xrpl-includer@.service  xrpl-ingestor@.service  xrpl-subscriber@.service  xrpl-ticket-creator@.service  xrpl_service_wrapper.sh
deploy/terraform/: README.md  ecr.tf  iam.tf  main.tf  secrets.tf
migrations/: 0014_solana_signatures.sql  0014_solana_transactions.sql  0015_solana_subscriber_cursors.sql
recovery_tools/: Cargo.toml
relayer_base/: Cargo.toml
relayer_base/src/: database.rs  includer.rs  ingestor.rs  price_feed.rs  subscriber.rs  utils.rs
relayer_base/src/gmp_api/: gmp_types.rs
relayer_base/src/models/: gmp_events.rs  mod.rs  task_retries.rs
solana/: Cargo.toml
solana/src/: broadcaster.rs  client.rs  config.rs  error.rs  gas_calculator.rs  includer.rs  ingestor.rs  lib.rs  parser.rs  refund_manager.rs  subscriber.rs  subscriber_listener.rs  subscriber_poller.rs  test_utils.rs  utils.rs
solana/src/models/: mod.rs  solana_signature.rs  solana_subscriber_cursor.rs  solana_transaction.rs
solana/src/transaction_parser/: common.rs  discriminators.rs  mod.rs  parser.rs  parser_call_contract.rs  parser_execute_insufficient_gas.rs  parser_message_approved.rs  parser_message_executed.rs  parser_native_gas_added.rs  parser_native_gas_paid.rs  parser_native_gas_refunded.rs
solana/tests/testdata/: rpc_batch_repsonse.json
solana/tests/testdata/transactions/: dummy_transaction.json  encoded_confirmed_tx_with_meta.json  native_gas_paid.json  solana_transaction.json
solana_types/: Cargo.toml
solana_types/src/: lib.rs  solana_types.rs  test_utils.rs
src/: config.rs  database.rs  distributor.rs  error.rs  includer.rs  ingestor.rs  lib.rs  payload_cache.rs  price_feed.rs  price_view.rs  proof_retrier.rs  queue.rs  subscriber.rs  utils.rs  voting_retrier.rs
src/gmp_api/: gmp_types.rs  mod.rs
src/models/: mod.rs  xrpl_transaction.rs
src/xrpl/: broadcaster.rs  client.rs  funder.rs  includer.rs  ingestor.rs  mod.rs  refund_manager.rs  subscriber.rs  ticket_creator.rs
testdata/wasm_events/contract_call/: event.json
testdata/wasm_events/message_approved/: event.json
testdata/wasm_events/message_executed/: event.json
testdata/wasm_events/token_sent/: event.json
testdata/wasm_events/valid_events/: events.json
testdata/xrpl_tasks/case_sensitive/: task.json
testdata/xrpl_tasks/construct_proof/: invalid_task.json  task.json
testdata/xrpl_tasks/execute/: invalid_task.json  task.json
testdata/xrpl_tasks/gateway_tx/: invalid_task.json  task.json
testdata/xrpl_tasks/invalid_tasks/: empty_type.json  invalid_verify_task.json  lowercase_type.json  missing_required_fields.json  null_type.json  number_as_string.json  underscore_type_simple.json  whitespace_type.json  whitespace_type_simple.json
testdata/xrpl_tasks/react_to_expired_signing_session/: invalid_task.json  task.json
testdata/xrpl_tasks/react_to_retriable_poll/: invalid_task.json  task.json
testdata/xrpl_tasks/react_to_wasm_event/: invalid_task.json  task.json
testdata/xrpl_tasks/refund/: invalid_task.json  task.json
testdata/xrpl_tasks/unknown/: task.json
testdata/xrpl_tasks/verify/: invalid_task.json  task.json
testdata/xrpl_tasks/with_metadata/: task.json
ton/src/transaction_parser/: parser_its_interchain_token_deployment_started.rs
ton_types/: Cargo.toml  README.md
ton_types/src/: lib.rs  ton_types.rs
xrpl/: Cargo.toml
xrpl/src/: broadcaster.rs  client.rs  config.rs  error.rs  funder.rs  includer.rs  ingestor.rs  lib.rs  queued_tx_monitor.rs  refund_manager.rs  sequence_allocator.rs  subscriber.rs  ticket_creator.rs  utils.rs  voting_retrier.rs
xrpl/src/models/: mod.rs  queued_transactions.rs  xrpl_transaction.rs
