[workspace]
members = ["relayer_base", "recovery_tools", "xrpl", "ton"]
resolver = "2"

[workspace.dependencies]
relayer-base = { path = "relayer_base" }
xrpl = { path = "xrpl" }
ton_types = { path = "ton_types" }
recovery-tools = { path = "recovery_tools" }
anyhow = "1.0.93"
async-stream = "0.3.6"
futures = "0.3.31"
lapin = "2.5.0"
serde_json = "1.0.133"
serde_derive = "1.0.215"
tokio = { version = "1.41.1", features = ["full", "test-util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
sqlx = { version = "0.8.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
xrpl_api = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_api" }
xrpl_ws_client = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_ws_client" }
xrpl_types = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_types" }
xrpl_http_client = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_http_client" }
xrpl_binary_codec = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_binary_codec" }
xrpl_amplifier_types = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "fix/non-unique-unsigned-tx-hash", package = "xrpl-types" }
axelar-wasm-std = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "fix/non-unique-unsigned-tx-hash", package = "axelar-wasm-std" }
xrpl_gateway = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "xrpl", package = "xrpl-gateway" }
xrpl_multisig_prover = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "xrpl", package = "xrpl-multisig-prover" }
router_api = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "fix/non-unique-unsigned-tx-hash", package = "router-api" }
multisig = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "fix/non-unique-unsigned-tx-hash", package = "multisig" }
interchain-token-service = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "xrpl", package = "interchain-token-service" }
hex = "0.4.3"
reqwest = { version = "0.12.9", features = ["native-tls"] }
thiserror = "2.0.3"
error-stack = "0.5.0"
serde = "1.0.215"
libsecp256k1 = "0.7.1"
tokio-util = "0.7.12"
uuid = { version = "1.17.0", features = ["v4"] }
redis = { version = "0.32.4", features = ["tokio-rustls-comp"] }
async-std = "1.13.0"
sentry = { version = "0.42.0", features = ["opentelemetry", "reqwest", "sentry-opentelemetry"] }
sentry-tracing = "0.42.0"
opentelemetry = { version = "0.29.1", features = ["trace"] }
opentelemetry_sdk = { version = "0.29.0", features = ["trace"] }
base64 = "0.22.1"
serde_yaml = "0.9.34"
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.9.1"
coingecko = "1.1.3"
rust_decimal = "1.37.1"
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.2"
regex = "1.11.1"
mockall = "0.13.1"
mockito = "1.6.1"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
async-trait = "0.1.88"
tonlib-core = "0.26.0"
httpmock = "0.7.0"

# switch between warn and allow to enable/disable more restrictive clippy lints
[workspace.lints.clippy]
uninlined_format_args = "allow"
unwrap_used = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
unnecessary_box_returns = "warn"
