[package]
name = "recovery-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
lapin = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
relayer-base = { workspace = true }