[package]
name = "xrpl"
version = "0.1.0"
edition = "2021"

[dependencies]
relayer-base = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
r2d2 = { workspace = true }
error-stack = { workspace = true }
libsecp256k1 = { workspace = true }
redis = { workspace = true }
rand = { workspace = true }
xrpl_binary_codec = { workspace = true }
xrpl_types = { workspace = true }
xrpl_api = { workspace = true }
reqwest = { workspace = true }
xrpl_http_client = { workspace = true }
axelar-wasm-std = { workspace = true }
xrpl_gateway = { workspace = true }
xrpl_multisig_prover = { workspace = true }
router_api = { workspace = true }
interchain-token-service = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rust_decimal = { workspace = true }
xrpl_amplifier_types = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
relayer-base = { workspace = true, features = ["mocks"] }

[[bin]]
name = "xrpl_ingestor"
path = "src/bin/xrpl_ingestor.rs"

[[bin]]
name = "xrpl_distributor"
path = "src/bin/xrpl_distributor.rs"

[[bin]]
name = "xrpl_subscriber"
path = "src/bin/xrpl_subscriber.rs"

[[bin]]
name = "xrpl_includer"
path = "src/bin/xrpl_includer.rs"

[[bin]]
name = "xrpl_funder"
path = "src/bin/xrpl_funder.rs"

[[bin]]
name = "xrpl_ticket_creator"
path = "src/bin/xrpl_ticket_creator.rs"

[[bin]]
name = "xrpl_ticket_monitor"
path = "src/bin/xrpl_ticket_monitor.rs"

[[bin]]
name = "xrpl_subscriber_recovery"
path = "src/bin/recovery/xrpl_subscriber_recovery.rs"

[[bin]]
name = "xrpl_task_recovery"
path = "src/bin/recovery/xrpl_task_recovery.rs"

[[bin]]
name = "xrpl_heartbeat_monitor"
path = "src/bin/xrpl_heartbeat_monitor.rs"

[[bin]]
name = "xrpl_queued_tx_monitor"
path = "src/bin/xrpl_queued_tx_monitor.rs"
